ros_ws/log/build_2025-01-13_06-06-11/dogzilla_joints/stderr.log
  File "/home/yahboom/Desktop/dogzillaS2/ros_ws/install/dogzilla_joints/lib/python3.10/site-packages/dogzilla_joints/joints_sub.py", line 12
    		for position in msg.position
    		                            ^
SyntaxError: expected ':'

